<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeadDrop</string>
    <string name="action_settings">Settings</string>
    <!-- Tag button text values -->
    <string name="tagButton_text_start">Read a Tag</string>
    <string name="tagButton_text_stop">Waiting for NFC Tag…\n(click to cancel)</string>
    <!-- Tag entry hint value -->
    <string name="tagEditText_hint">Manually enter tag…</string>
    <!-- Go button text value -->
    <string name="goButton_text">Go</string>
    <!-- Mode button text values -->
    <string name="modeButton_text_on">Drop</string>
    <string name="modeButton_text_off">Pickup</string>
    <!-- Drop data text and hint values -->
    <string name="dataTextView_text">Data:</string>
    <string name="dataEditText_hint">Enter data string…</string>
    <!-- Drop accuracy text and hint values -->
    <string name="accuracyTextView_text">Required pickup accuracy (miles):</string>
    <string name="accuracyEditText_hint">Enter accuracy…</string>
    <!-- Image button text -->
    <string name="imageButton_text">Take a picture (optional)</string>
    <!-- Drop button text -->
    <string name="dropButton_text">DROP</string>
    <!-- Preference text values -->
    <string name="pref_server_addr_key">server_addr</string>
    <string name="pref_server_addr_title">Change Server Address</string>
    <string name="pref_server_addr_summary">Server address must include port number</string>
    <string name="pref_server_addr_default">http://172.31.173.72:8080</string>

    <!-- Generated values -->
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_drop">DropActivity</string>

</resources>